# gzgwendolen

./: .gitignore  README.md  Readme.md  isvalid.bash  rosbuild.bash  rosbuildtest.bash
.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
NetBeansProjects/: Readme.md  gwendolencrclclient.bash  gwendolencrclclient.bat
NetBeansProjects/GwendolynCrclClient/nbproject/: build-impl.xml  genfiles.properties  project.properties
NetBeansProjects/GwendolynCrclClient/nbproject/private/: private.properties  private.xml
NetBeansProjects/GwendolynCrclClient/src/gwendolyncrclclient/: CRCLClient.java  CShape.java  CShapes.java  Globals.java  GwendolynCrclClient.java  KittingDemo.java  StatusThread.java  rcs_robot.java  rcs_world.java
NetBeansProjects/crcl4java-base-model/: pom.xml
NetBeansProjects/crcl4java-utils/: run.bat
Worlds/Templates/: robots_template.world
doc/: ComparativeInstances  Sigfaultcrclapp.txt
doc/E2E/: CrclXmlWithModelInferencing.txt  GzGwendolen.docx
doc/EmbeddedCrclSimulation/: Addinglibraryandjartonetbeansproject.docx  AgilityGear.docx  KittingModels.vsd  KittingPartModels.docx  KittingScene.vsd  NetbeansMavenError.docx  Simulated Kitting Demo in Java with hard coded kitting scene from agility lab.docx  ~$$KittingModels.~vsd
include/aprs_headers/: Debug.h  RCSThreadTemplate.h  RCSTimer.h  logging.h  seriallinkrobot.h
plugins7/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
plugins7/lib/pkgconfig/: gzparallelgripperplugin.pc
plugins7/share/gzparallelgripperplugin/cmake/: gzparallelgripperpluginConfig.cmake
src/aprs_headers/include/aprs_headers/: Config.h  Core.h  env.h
src/aprs_plugins/ikfast_fanuc_plugin/: CMakeLists.txt
src/crcl/crclapp/: CMakeLists.txt  crclapp.pro  notes
src/crcl/crclapp/config/: Config.ini
src/crcl/crclapp/src/: CommandLineInterface.cpp  Crcl.cpp  Crcl2Rcs.cpp  CrclApi.cpp  CrclPublisherInterface.cpp  CrclRos.cpp  CrclServer.cpp  CrclSubscriberInterface.cpp  Demo.cpp  (+5 more)
src/gotraj/: CMakeLists.txt
src/gzplugins/gzjointcmdplugin/: CMakeLists.txt  gzjntcommandplugin.cpp  gzjointcmdplugin.pro
src/gzplugins/gzmodelplugin/: CMakeLists.txt  gzmodelplugin.cpp  gzmodelplugin.h  gzmodelplugin.pro
src/gzplugins/gzparallelgripperplugin/: CMakeLists.txt  gzparallelgripperplugin.cpp  gzparallelgripperplugin.pro
src/gzrosrcs/: CMakeLists.txt  Notes.txt  gzrosrcs.pro  package.xml  version
src/gzrosrcs/src/: Controller.cpp  CrclApi.cpp  Demo.cpp  Globals.cpp  RCSInterpreter.cpp  RobotControlException.cpp  Shape.cpp  assimp.cpp  commandlineinterface.cpp  cros.cpp  gazebo.cpp  gripper.cpp  kinematicring.cpp  nist_robotsnc.cpp
(+26 files in other folders)
